# AppML

./: README.md
PA1/: PA1-TOTALLYFINAL.html  PA1-fixed.html  PA1.ipynb  PA1_final.html  PA1_oscar.ipynb  pyproject.toml
PA2/: PA2.html  PA2.ipynb  pyproject.toml
PA3/: classifier.ipynb  classifier.py  main.py  plan.txt  pyproject.toml
PA4/: PA4.ipynb  aml_perceptron.py  pyproject.toml
